# mastery

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN_BRIEF.md  DESIGN_BRIEF_OPTIMIZED.md  README.md
.agents/audits/: today-screen-element-justification.md
.specify/memory/: constitution.md
design/: action-patterns-problem.md  design-briefs.md  design-tokens.md  improvement-backlog.md  mastery-design.pen  meaning-editor-design.md  screen-flows.md
desktop/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts  vitest.config.ts
desktop/coverage/: clover.xml  coverage-final.json  index.html
desktop/scripts/: build-release.sh
desktop/src/: App.css  App.tsx  app.css
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  clippy.toml  tauri.conf.json
desktop/src-tauri/scripts/: bundle-dylibs.sh  fix-binary-paths.sh
desktop/src-tauri/src/: kindle.rs  logging.rs  main.rs
desktop/src-tauri/src/auth/: mod.rs
desktop/src-tauri/src/db/: highlights.rs  mod.rs  preferences.rs  schema.rs  schema.sql
desktop/src-tauri/src/kindle/: detection.rs  mod.rs  mount.rs  mtp.rs  parser.rs  tests.rs  watcher.rs
desktop/src-tauri/src/sync/: auth.rs  mod.rs  push.rs
desktop/src-tauri/src/vocab/: mod.rs
extension/: .env.example  .gitignore  .prettierrc  README.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  wxt.config.ts
extension/assets/: app.css
extension/entrypoints/: app.css  background.ts  content.ts
extension/lib/: api-client.ts  auth.ts  cache.ts  settings.ts  types.ts  utils.ts
mobile/: .env.example  .gitignore  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
mobile/lib/: main.dart  main_preview.dart
scripts/: check-state.mjs  check-vocabulary.mjs  compare-translations.mjs  enrich-global-dictionary.mjs  migrate-to-global-dictionary.mjs  model-comparison.md  package.json  pnpm-lock.yaml  process-enrichment-queue.mjs
specs/: app-audit-context-overrides.md  mobile-ideal-journey-backlog.md  mobile-navigation-contract.md  ux-improvement-plan.md
supabase/: AGENTS.md  DATABASE.md  config.toml
(+467 files in other folders)
