[package]
name = "mastery-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop agent for Kindle auto-import"
authors = ["Mastery Team"]
license = "MIT"
repository = ""

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# USB detection
nusb = "0.1"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client for Supabase
reqwest = { version = "0.12", features = ["json"] }

# Regex for parsing
regex = "1"
once_cell = "1"

# Platform-specific directory paths
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Pedantic lints for strict code quality
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Deny certain dangerous patterns
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
